package DS;

message MSG_DS_STORE_MAIN_REGISTER
{
    optional uint32 thread_id = 1;
}

message MSG_DS_STORE_MAIN_REGISTER_ACK
{
    optional uint32 thread_id = 1;
}

message MSG_DS_MAIN_STORE_PREPARE_STORE
{
    required int32 task_id = 1;
    required int32 session_id = 2;
    required int32 type_id = 3;
}
